[package]
name = "my_wormhole_project"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "my_wormhole_project"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
solana-program = "1.16.16"
anchor-lang = "0.29.0"
wormhole-anchor-sdk = { version = "0.1.0-alpha.2", default-features = false }